--- a/_posts/2017-03-05-99.index.md
+++ b/_posts/2017-03-05-99.index.md
@@ -1,9 +1,15 @@
 ---
 layout: post
-title: Table Of Contents
+title: Table of contents
 date: 2017-08-16T02:00
 ---
 
+---
+<h1 class="table-contents">Open source project on GitHub</h1>
+ * <a href="https://github.com/hanjoongcho/remember-miniman" target="_blank">기억력게임 Remember Mini Man</a> 
+ * <a href="https://github.com/hanjoongcho/aaf-easydiary" target="_blank">쉽게쓰는 비밀일기장 Easy Diary</a>
+ 
+ 
 ---
 <h1 class="table-contents">Jupyter/IPython Notebook</h1>
  * What is the Jupyter Notebook?
@@ -12,25 +18,25 @@ date: 2017-08-16T02:00
  
  
 ---
-<h1 class="table-contents">OPEN API</h1>
+<h1 class="table-contents">Open API</h1>
  * Naver
    * [Naver OAuth 2.0 for Android](/app/2017/03/08/02.oauth.naver/)
  * Kakao
    * [Kakao OAuth 2.0 for Android](/app/2017/03/09/01.oauth.kakao/)    
    
 ---
-<h1 class="table-contents">NOSQL</h1>
+<h1 class="table-contents">NoSQL</h1>
  * mongoDB
    * [mongoDB 설치 가이드 및 CRUD 예제](/app/2016/11/17/02.post.mongodb/) 
    * [mongoDB 테스트용 json파일 import 및 document(bson) 조회](/app/2016/11/17/03.post.mongodb/)  
 
 ---
-<h1 class="table-contents">JEKYLL</h1>
+<h1 class="table-contents">Jekyll</h1>
  * jekyll 환경구축
    * [ruby 및 thirdparty lib 설치하기](/app/2017/03/08/01.jekyll/) 
 
 ---
-<h1 class="table-contents">GRADLE</h1>
+<h1 class="table-contents">Gradle</h1>
  * [android lib module 생성 후 application에서 참조하기](/app/2017/03/09/02.gradle.android/)  
  * [java project third party lib 포함해서 빌드하기](/app/2017/03/14/01.gradle.java/)  
  
