Add Kotlin posting

--- a/_posts/2017-02-24-02.mongodb.md
+++ b/_posts/2017-02-24-02.mongodb.md
@@ -2,7 +2,7 @@
 layout: post
 title: mongoDB 설치 가이드 및 CRUD 예제 
 date: 2016-11-17T14:37:44.000Z
-category: app
+category: post
 ---
 
 <img class="fit image" src="/images/post/mongodb.png">
