--- a/_posts/2017-02-24-03.mongodb.md
+++ b/_posts/2017-02-24-03.mongodb.md
@@ -2,7 +2,7 @@
 layout: post
 title: mongoDB 테스트용 json파일 import 및 document(bson) 조회 
 date: 2016-11-17T14:37:44.000Z
-category: app
+category: post
 ---
 
 <img class="fit image" src="/images/post/mongodb.png">
