--- a/_posts/2017-03-12-02.ubuntu.command.md
+++ b/_posts/2017-03-12-02.ubuntu.command.md
@@ -2,7 +2,7 @@
 layout: post
 title: ubuntu 기본 명령어
 date: 2017-03-12T01:00
-category: app
+category: post
 ---
 
 <img class="fit image" src="/images/post/ubuntu.png">
