--- a/_posts/2017-08-16-01.jupyter.installation.md
+++ b/_posts/2017-08-16-01.jupyter.installation.md
@@ -2,7 +2,7 @@
 layout: post
 title: Jupyter Notebook 설치하기
 date: 2017-08-16T01:00
-category: jupyter
+category: post
 ---
 
 <img class="fit image" src="/images/post/7388996.png">
