--- a/_posts/2017-08-25-01.kotlin.md
+++ b/_posts/2017-08-25-01.kotlin.md
@@ -24,8 +24,76 @@ import java.util.*
 ```
 
 
-#### 함수 선언
+#### 함수 정의
 ```
+// 정수 파라미터 2개를 받아 정수값을 리턴하는 함수
+fun sum(a: Int, b: Int): Int {
+    return a + b
+}
+
+fun main(args: Array<String>) {
+    print("sum of 3 and 5 is ")
+    println(sum(3, 5))
+} 
+```
+
+```
+// 추론타입을 리턴하는 함수를 표현식과 함께사용
+fun sum(a: Int, b: Int) = a + b
+
+fun main(args: Array<String>) {
+    println("sum of 19 and 23 is ${sum(19, 23)}")
+}
+```
+```
+// Function returning no meaningful value:
+fun printSum(a: Int, b: Int): Unit {
+    println("sum of $a and $b is ${a + b}")
+}
+
+fun main(args: Array<String>) {
+    printSum(-1, 8)
+}
+```
+
+```
+// Unit return type can be omitted:
+fun printSum(a: Int, b: Int) {
+    println("sum of $a and $b is ${a + b}")
+}
+
+fun main(args: Array<String>) {
+    printSum(-1, 8)
+}
+```
+
+#### 지역변수 정의
+```
+// Assign-once (read-only) local variable:
+fun main(args: Array<String>) {
+    val a: Int = 1  // immediate assignment
+    val b = 2   // `Int` type is inferred
+    val c: Int  // Type required when no initializer is provided
+    c = 3       // deferred assignment
+    println("a = $a, b = $b, c = $c")
+}
+```
+
+```
+// Mutable variable:
+fun main(args: Array<String>) {
+    var x = 5 // `Int` type is inferred
+    x += 1
+    println("x = $x")
+}
+```
+
+```
+//
 포스팅중...
+```
+
+```
+//
 ```
 
