Add Kotlin posting

--- a/_posts/2017-08-25-01.kotlin.md
+++ b/_posts/2017-08-25-01.kotlin.md
@@ -6,7 +6,7 @@ category: post
 ---
 
 ## Kotlin 기본구문 익히기
-kotlinlang 사이트의 가이드문서를 기반으로 포스팅되었음을 밝힘니다.  
+kotlinlang 사이트의 가이드문서를 기반으로 포스팅 되었음을 밝힘니다.  
 Getting Started Basic Syntax    
 https://kotlinlang.org/docs/reference/basic-syntax.html  
 
@@ -15,7 +15,7 @@ https://kotlinlang.org/docs/reference/basic-syntax.html
 #### 패키지 선언
 ```
 패키지의 선언은 소스파일의 제일 상단에 위치시켜야 합니다.
-디렉토리와 패키지를 일치시킬 필요는 없습니다. 소스파일을 임의 디렉토리에 배치해도 무방합니다. 그래도 되나???
+디렉토리와 패키지를 일치시킬 필요는 없습니다. 소스파일을 임의 디렉토리에 배치해도 무방합니다. 
 package my.demo
 
 import java.util.*
@@ -35,6 +35,8 @@ fun main(args: Array<String>) {
     print("sum of 3 and 5 is ")
     println(sum(3, 5))
 } 
+--------------------------------------------------------
+sum of 3 and 5 is 8
 ```
 
 ```
@@ -44,6 +46,8 @@ fun sum(a: Int, b: Int) = a + b
 fun main(args: Array<String>) {
     println("sum of 19 and 23 is ${sum(19, 23)}")
 }
+--------------------------------------------------------
+sum of 19 and 23 is 42
 ```
 ```
 // Function returning no meaningful value:
@@ -54,6 +58,8 @@ fun printSum(a: Int, b: Int): Unit {
 fun main(args: Array<String>) {
     printSum(-1, 8)
 }
+--------------------------------------------------------
+sum of -1 and 8 is 7
 ```
 
 ```
@@ -65,35 +71,377 @@ fun printSum(a: Int, b: Int) {
 fun main(args: Array<String>) {
     printSum(-1, 8)
 }
+--------------------------------------------------------
+sum of -1 and 8 is 7
 ```
 
 #### 지역변수 정의
 ```
-// Assign-once (read-only) local variable:
+// 한번만 할당가능한(읽기전용) 지역변수 정의
 fun main(args: Array<String>) {
     val a: Int = 1  // immediate assignment
     val b = 2   // `Int` type is inferred
     val c: Int  // Type required when no initializer is provided
     c = 3       // deferred assignment
     println("a = $a, b = $b, c = $c")
+--------------------------------------------------------	
+a = 1, b = 2, c = 3	
 }
 ```
 
 ```
-// Mutable variable:
+// 여러번 할당가능한 변수 정의
 fun main(args: Array<String>) {
     var x = 5 // `Int` type is inferred
     x += 1
     println("x = $x")
 }
+--------------------------------------------------------
+x = 6
 ```
 
+#### 주석
+```
+// 한줄 주석
+// This is an end-of-line comment
+
+// 블럭 주석(Java와 달리 Kotlin의 블록 주석은 중첩 될 수 있습니다.)
+/* This is a block comment
+   on multiple lines. */
+```
+
+#### string 템플릿 
+```
+fun main(args: Array<String>) {
+    var a = 1
+    // simple name in template:
+    val s1 = "a is $a" 
+
+    a = 2
+    // arbitrary expression in template:
+    val s2 = "${s1.replace("is", "was")}, but now is $a"
+    println(s2)
+}
+--------------------------------------------------------
+a was 1, but now is 2
+```
+
+#### 조건문 
 ```
 //
-포스팅중...
+fun maxOf(a: Int, b: Int): Int {
+    if (a > b) {
+        return a
+    } else {
+        return b
+    }
+}
+
+fun main(args: Array<String>) {
+    println("max of 0 and 42 is ${maxOf(0, 42)}")
+}
+--------------------------------------------------------
+max of 0 and 42 is 42
 ```
 
+#### null값 할당이 가능한 변수와 null값 체크
 ```
-//
+// A reference must be explicitly marked as nullable when null value is possible.
+// Return null if str does not hold an integer:
+fun parseInt(str: String): Int? {
+    return str.toIntOrNull()
+}
+
+fun printProduct(arg1: String, arg2: String) {
+    val x = parseInt(arg1)
+    val y = parseInt(arg2)
+
+    // Using `x * y` yields error because they may hold nulls.
+    if (x != null && y != null) {
+        // x and y are automatically cast to non-nullable after null check
+        println(x * y)
+    }
+    else {
+        println("either '$arg1' or '$arg2' is not a number")
+    }    
+}
+
+
+fun main(args: Array<String>) {
+    printProduct("6", "7")
+    printProduct("a", "7")
+    printProduct("a", "b")
+}
+--------------------------------------------------------
+42
+either 'a' or '7' is not a number
+either 'a' or 'b' is not a number
+```
+```
+fun parseInt(str: String): Int? {
+    return str.toIntOrNull()
+}
+
+fun printProduct(arg1: String, arg2: String) {
+    val x = parseInt(arg1)
+    val y = parseInt(arg2)
+    
+    // ...
+    if (x == null) {
+        println("Wrong number format in arg1: '${arg1}'")
+        return
+    }
+    if (y == null) {
+        println("Wrong number format in arg2: '${arg2}'")
+        return
+    }
+
+    // x and y are automatically cast to non-nullable after null check
+    println(x * y)
+}
+
+fun main(args: Array<String>) {
+    printProduct("6", "7")
+    printProduct("a", "7")
+    printProduct("99", "b")
+}
+--------------------------------------------------------
+42
+Wrong number format in arg1: 'a'
+Wrong number format in arg2: 'b'
 ```
 
+#### 타입확인과 자동 형변환
+```
+// The is operator checks if an expression is an instance of a type. If an immutable local variable or property is checked for a specific type, there's no need to cast it explicitly
+fun getStringLength(obj: Any): Int? {
+    if (obj is String) {
+        // `obj` is automatically cast to `String` in this branch
+        return obj.length
+    }
+
+    // `obj` is still of type `Any` outside of the type-checked branch
+    return null
+}
+
+
+fun main(args: Array<String>) {
+    fun printLength(obj: Any) {
+        println("'$obj' string length is ${getStringLength(obj) ?: "... err, not a string"} ")
+    }
+    printLength("Incomprehensibilities")
+    printLength(1000)
+    printLength(listOf(Any()))
+}
+--------------------------------------------------------
+'Incomprehensibilities' string length is 21 
+'1000' string length is ... err, not a string 
+'[java.lang.Object@77459877]' string length is ... err, not a string 
+```
+```
+fun getStringLength(obj: Any): Int? {
+    if (obj !is String) return null
+
+    // `obj` is automatically cast to `String` in this branch
+    return obj.length
+}
+
+
+fun main(args: Array<String>) {
+    fun printLength(obj: Any) {
+        println("'$obj' string length is ${getStringLength(obj) ?: "... err, not a string"} ")
+    }
+    printLength("Incomprehensibilities")
+    printLength(1000)
+    printLength(listOf(Any()))
+}
+--------------------------------------------------------
+'Incomprehensibilities' string length is 21 
+'1000' string length is ... err, not a string 
+'[java.lang.Object@77459877]' string length is ... err, not a string 
+```
+```
+fun getStringLength(obj: Any): Int? {
+    // `obj` is automatically cast to `String` on the right-hand side of `&&`
+    if (obj is String && obj.length > 0) {
+        return obj.length
+    }
+
+    return null
+}
+
+
+fun main(args: Array<String>) {
+    fun printLength(obj: Any) {
+        println("'$obj' string length is ${getStringLength(obj) ?: "... err, is empty or not a string at all"} ")
+    }
+    printLength("Incomprehensibilities")
+    printLength("")
+    printLength(1000)
+}
+--------------------------------------------------------
+'Incomprehensibilities' string length is 21 
+'' string length is ... err, is empty or not a string at all 
+'1000' string length is ... err, is empty or not a string at all 
+```
+
+#### for 반복문
+```
+fun main(args: Array<String>) {
+    val items = listOf("apple", "banana", "kiwi")
+    for (item in items) {
+        println(item)
+    }
+}
+--------------------------------------------------------
+apple
+banana
+kiwi
+```
+```
+fun main(args: Array<String>) {
+    val items = listOf("apple", "banana", "kiwi")
+    for (index in items.indices) {
+        println("item at $index is ${items[index]}")
+    }
+}
+--------------------------------------------------------
+item at 0 is apple
+item at 1 is banana
+item at 2 is kiwi
+```
+
+#### while 반복문
+```
+fun main(args: Array<String>) {
+    val items = listOf("apple", "banana", "kiwi")
+    var index = 0
+    while (index < items.size) {
+        println("item at $index is ${items[index]}")
+        index++
+    }
+}
+--------------------------------------------------------
+item at 0 is apple
+item at 1 is banana
+item at 2 is kiwi
+```
+
+#### when 표현식
+```
+fun describe(obj: Any): String =
+when (obj) {
+    1          -> "One"
+    "Hello"    -> "Greeting"
+    is Long    -> "Long"
+    !is String -> "Not a string"
+    else       -> "Unknown"
+}
+
+fun main(args: Array<String>) {
+    println(describe(1))
+    println(describe("Hello"))
+    println(describe(1000L))
+    println(describe(2))
+    println(describe("other"))
+}
+--------------------------------------------------------
+One
+Greeting
+Long
+Not a string
+Unknown
+```
+
+#### Using ranges
+```
+// Check if a number is within a range using in operator
+fun main(args: Array<String>) {
+    val x = 10
+    val y = 9
+    if (x in 1..y+1) {
+        println("fits in range")
+    }
+}
+--------------------------------------------------------
+fits in range
+```
+```
+// Check if a number is out of range
+fun main(args: Array<String>) {
+    val list = listOf("a", "b", "c")
+
+    if (-1 !in 0..list.lastIndex) {
+        println("-1 is out of range")
+    }
+    if (list.size !in list.indices) {
+        println("list size is out of valid list indices range too")
+    }
+}
+--------------------------------------------------------
+-1 is out of range
+list size is out of valid list indices range too
+```
+```
+// Iterating over a range
+fun main(args: Array<String>) {
+    for (x in 1..5) {
+        print(x)
+    }
+}
+--------------------------------------------------------
+12345
+```
+```
+// or over a progression
+fun main(args: Array<String>) {
+    for (x in 1..10 step 2) {
+        print(x)
+    }
+    for (x in 9 downTo 0 step 3) {
+        print(x)
+    }
+}
+--------------------------------------------------------
+135799630
+```
+#### Using collections
+```
+// Iterating over a collection
+fun main(args: Array<String>) {
+    val items = listOf("apple", "banana", "kiwi")
+    for (item in items) {
+        println(item)
+    }
+}
+--------------------------------------------------------
+apple
+banana
+kiwi
+```
+```
+// Checking if a collection contains an object using in operator
+fun main(args: Array<String>) {
+    val items = setOf("apple", "banana", "kiwi")
+    when {
+        "orange" in items -> println("juicy")
+        "apple" in items -> println("apple is fine too")
+    }
+}
+--------------------------------------------------------
+apple is fine too
+```
+```
+// Using lambda expressions to filter and map collections
+fun main(args: Array<String>) {
+    val fruits = listOf("banana", "avocado", "apple", "kiwi")
+    fruits
+    .filter { it.startsWith("a") }
+    .sortedBy { it }
+    .map { it.toUpperCase() }
+    .forEach { println(it) }
+}
+--------------------------------------------------------
+APPLE
+AVOCADO
+```
