Add Kotlin posting

--- a/_posts/2017-08-25-01.kotlin.md
+++ b/_posts/2017-08-25-01.kotlin.md
@@ -50,7 +50,7 @@ fun main(args: Array<String>) {
 sum of 19 and 23 is 42
 ```
 ```
-// Function returning no meaningful value:
+// Unit타입(의미있는 값이 리턴하지 않음?? / kotlin.Unit)을 리턴하는 함수
 fun printSum(a: Int, b: Int): Unit {
     println("sum of $a and $b is ${a + b}")
 }
@@ -63,7 +63,7 @@ sum of -1 and 8 is 7
 ```
 
 ```
-// Unit return type can be omitted:
+// Unit타입 선언을 생략
 fun printSum(a: Int, b: Int) {
     println("sum of $a and $b is ${a + b}")
 }
@@ -355,7 +355,7 @@ Unknown
 
 #### Using ranges
 ```
-// Check if a number is within a range using in operator
+// in 연산자를 사용하여 숫자가 범위 내에 있는지 확인
 fun main(args: Array<String>) {
     val x = 10
     val y = 9
@@ -367,7 +367,7 @@ fun main(args: Array<String>) {
 fits in range
 ```
 ```
-// Check if a number is out of range
+// in 연산자를 사용하여 숫자가 범위 내에 있는지 확인
 fun main(args: Array<String>) {
     val list = listOf("a", "b", "c")
 
@@ -383,7 +383,7 @@ fun main(args: Array<String>) {
 list size is out of valid list indices range too
 ```
 ```
-// Iterating over a range
+// IntRange 반복
 fun main(args: Array<String>) {
     for (x in 1..5) {
         print(x)
@@ -405,9 +405,9 @@ fun main(args: Array<String>) {
 --------------------------------------------------------
 135799630
 ```
-#### Using collections
+#### 컬렉션 사용
 ```
-// Iterating over a collection
+// 컬렉션 반복
 fun main(args: Array<String>) {
     val items = listOf("apple", "banana", "kiwi")
     for (item in items) {
@@ -420,7 +420,7 @@ banana
 kiwi
 ```
 ```
-// Checking if a collection contains an object using in operator
+// in 연산자를 사용하여 컬렉션에 개체가 포함되어 있는지 확인
 fun main(args: Array<String>) {
     val items = setOf("apple", "banana", "kiwi")
     when {
@@ -432,7 +432,7 @@ fun main(args: Array<String>) {
 apple is fine too
 ```
 ```
-// Using lambda expressions to filter and map collections
+// 람다 식을 사용하여 콜렉션 필터링 및 매핑
 fun main(args: Array<String>) {
     val fruits = listOf("banana", "avocado", "apple", "kiwi")
     fruits
