--- a/_posts/2017-08-25-01.kotlin.md
+++ b/_posts/2017-08-25-01.kotlin.md
@@ -8,7 +8,8 @@ category: post
 ## Kotlin 기본구문 익히기
 kotlinlang 사이트의 가이드문서를 기반으로 포스팅 되었음을 밝힘니다.  
 Getting Started Basic Syntax    
-https://kotlinlang.org/docs/reference/basic-syntax.html  
+출처: https://kotlinlang.org/docs/reference/basic-syntax.html  
+샘플코드: https://github.com/hanjoongcho/kotlin-cookbook
 
 <br />
 
