Update Kotlin posting about idioms

--- a/_posts/2017-08-28-01.kotlin.md
+++ b/_posts/2017-08-28-01.kotlin.md
@@ -22,6 +22,12 @@ Getting Started Idioms
 - [리스트에서 필터사용하기](#리스트에서-필터사용하기)
 - [String 리터럴 안에 표현식 넣기](#string-리터럴-안에-표현식-넣기)
 - [map 순회하면서 key & value 출력하기](#map-순회하면서-key--value-출력하기)
+- [in 연산자를 이용한 for, if문 제어하기](#in-연산자를-이용한-for-if문-제어하기)
+- [리터럴 할당이 한번만 가능한 읽기전용 객체](#리터럴-할당이-한번만-가능한-읽기전용-객체)
+- [Map 객체 이용하기](#Map-객체-이용하기)
+- [lazy로 상수 초기화 하기](#lazy로-상수-초기화-하기)
+- [상속없이 함수 확장하기](#상속없이-함수-확장하기)
+- [nullable 객체 컨트롤하기](#nullable-객체-컨트롤하기)
 
 <br />
 
@@ -124,12 +130,144 @@ key1 -> apple
 key2 -> banana
 ```
 
+### in 연산자를 이용한 for, if문 제어하기
+```
+fun main(args: Array<String>) {
+    // i값이 1부터 시작해서 10까지 1씩 증가하면서 순회
+    for (i in 1..10) {
+        print("$i ")
+        if (i == 10) println()
+    }
 
+    // i값이 1부터 시작해서 9까지 1씩 증가하면서 순회
+    for (i in 1 until 10) {
+        print("$i ")
+        if (i == 9) println()
+    }
 
+    // i값이 2부터 시작해서 10까지 2씩 증가하면서 순회
+    for (i in 2..10 step 2) {
+        print("$i ")
+        if (i == 10) println()
+    }
 
+    // i값이 10부터 시작해서 1까지 1씩 감소하면서 순회
+    for (i in 10 downTo 1) {
+        print("$i ")
+        if (i == 1) println()
+    }
 
+    var num = 3
+    // num값이 1 ~ 10 사이에 포함되면 true
+    if (num in 1..10) {
+        print("$num is fit the range")
+    }
 
+}
+--------------------------------------------------------	
+1 2 3 4 5 6 7 8 9 10 
+1 2 3 4 5 6 7 8 9 
+2 4 6 8 10 
+10 9 8 7 6 5 4 3 2 1 
+3 is fit the range
+```
 
+### 리터럴 할당이 한번만 가능한 읽기전용 객체
+```
+fun main(args: Array<String>) {
+    // Read-only list
+    val readOnlyList = listOf("a", "b", "c")
+    println(readOnlyList)
 
+    // Read-only map
+    val readOnlyMap = mapOf("a" to 1, "b" to 2, "c" to 3)
+    println(readOnlyMap)
+}
+--------------------------------------------------------	
+[a, b, c]
+{a=1, b=2, c=3}
+```
+
+### Map 객체 이용하기
+```
+fun main(args: Array<String>) {
+    var map = hashMapOf("key1" to "apple", "key2" to "banana")
+    println(map["key1"])
+    println(map)
+    map["key3"] = "pineapple"
+    println(map)
+}
+--------------------------------------------------------	
+apple
+{key1=apple, key2=banana}
+{key1=apple, key2=banana, key3=pineapple}
+```
+
+### lazy로 상수 초기화 하기
+```
+fun main(args: Array<String>) {
+    val lazyValue: String by lazy {
+        println("computed!")
+        "Hello"
+    }
+    println(lazyValue)
+    println(lazyValue)
+    println(lazyValue)
+}
+--------------------------------------------------------	
+computed!
+Hello
+Hello
+Hello
+```
+
+### 상속없이 함수 확장하기
+```
+fun main(args: Array<String>) {
+    fun String.spaceToCamelCase() {
+        println("call String.spaceToCamelCase()")
+    }
+    "Convert this to camelcase".spaceToCamelCase()
+}
+--------------------------------------------------------	
+call String.spaceToCamelCase()
+```
+
+### nullable 객체 컨트롤하기
+```
+fun main(args: Array<String>) {
+    val files = File("Test").listFiles()
+
+    // files 객체가 null이면 null를 출력하고 null이 아니면 size를 출력함
+    println(files?.size)
+
+    // files 객체가 null이면 empty를 출력하고 null이 아니면 size를 출력함
+    println(files?.size ?: "empty")
+
+    // map에 email 키값이 없을경우 "email not registered"를 리턴함
+    val map = mapOf("name" to "Hanjoong Cho")
+    val email = map["email"] ?: "email not registered"
+    println(email)
+
+    // 상수가 null이 아니면 블럭실행
+    val data = 81
+    data?.let {
+        println("Execute if not null data is $data")
+    }
+
+    // map이 null이 아니면 transformData 함수를 실행하고 결과값을 리턴
+    // map이 null이면 -1을 리턴
+    val mapped = map?.let { transformData(map) } ?: -1
+    println(map)
+    println(mapped)
+}
+--------------------------------------------------------	
+null
+empty
+email not registered
+Execute if not null data is 81
+{name=Hanjoong Cho}
+{name=HANJOONG CHO}
+```
 
 
