Added Kotlin posting about control flow

--- a/_posts/2017-08-25-01.kotlin.md
+++ b/_posts/2017-08-25-01.kotlin.md
@@ -7,7 +7,7 @@ category: post
 
 ## Kotlin 기본구문 익히기
 kotlinlang 사이트의 가이드문서를 기반으로 포스팅 되었음을 밝힘니다.  
-Getting Started Basic Syntax    
+Getting Started > Basic Syntax    
 출처: [https://kotlinlang.org/docs/reference/basic-syntax.html](https://kotlinlang.org/docs/reference/basic-syntax.html)  
 샘플코드: [https://github.com/hanjoongcho/kotlin-cookbook](https://github.com/hanjoongcho/kotlin-cookbook)  
 
