Update Kotlin posting about control flow

--- a/_posts/2017-03-05-99.index.md
+++ b/_posts/2017-03-05-99.index.md
@@ -43,10 +43,10 @@ category: post
  
 ---
 <h1 class="table-contents">Kotlin</h1>
- * [Basic Syntax(기본구문)](/post/2017/08/25/01.kotlin/) 
- * [Idioms](/post/2017/08/28/01.kotlin/) 
- * Coding Conventions(코딩규칙)
- * [Control Flow(제어문)](/post/2017/08/29/01.kotlin/)
+ * [Kotlin Basic Syntax(기본구문)](/post/2017/08/25/01.kotlin/) 
+ * [Kotlin Idioms](/post/2017/08/28/01.kotlin/) 
+ * Kotlin Coding Conventions(코딩규칙)
+ * [Kotlin Control Flow(제어문)](/post/2017/08/29/01.kotlin/)
  
 ---
 <h1 class="table-contents">C++</h1>
