--- a/_posts/2017-08-29-01.kotlin.md
+++ b/_posts/2017-08-29-01.kotlin.md
@@ -23,8 +23,6 @@ Basics > Control Flow
 
 ### If Expression
 ```
-// Kotlin에서 if는 표현식입니다. 즉, 값을 반환합니다.
-// 그러므로 삼항 연산자 (condition? then : else)가 없습니다. 왜냐하면 보통 if가 이 역할을 잘 수행하기 때문입니다.
 fun main(args: Array<String>) {
     // Kotlin에서 if는 표현식입니다. 즉, 값을 반환합니다.
     // 그러므로 삼항 연산자 (condition? then : else)가 없습니다. 왜냐하면 보통 if가 이 역할을 잘 수행하기 때문입니다.
@@ -70,7 +68,7 @@ fun main(args: Array<String>) {
     // when은 표현식이나 명령문으로 사용될 수 있습니다.
     // 표현식으로 사용되면 만족 된 분기의 값이 전체 표현식의 값이됩니다.
     // 명령문으로 사용되면 개별 분기의 값은 무시됩니다. (if와 마찬가지로 각 분기는 블록이 될 수 있고 마지막 표현식의 값이 리턴됩니다.)
-    // 분기 조건이 충족되지 않으면 else 블럭이 실행됩니다.
+    // 분기 조건이 충족되지 않으면 else 블럭이 실행됩니    다.
     // 표현식으로 when이 사용될 경우 컴파일러가 모든 가능한 경우의 분기처리를 보장하지 못한다면 else 분기가 필수로 정의되어야 합니다.
     whenExpression(1)
     whenExpression(3)
@@ -87,7 +85,6 @@ fun main(args: Array<String>) {
     whenExpression4(3)
     whenExpression4(33)
 
-    // 는 방법도 있습니다.
     // 스마트 캐스트 (smart cast)를 이용하면 값이 특정 데이터 타입인지 확인하고, 추가 검사없이 메서드 및 속성에 액세스 할 수 있습니다.
     println(hasPrefix(6000))
     println(hasPrefix("prefix_test_book"))
@@ -99,6 +96,58 @@ fun main(args: Array<String>) {
         SuperMarket.isOdd() -> println("x is odd")
         SuperMarket.isEven() -> println("x is even")
         else -> println("x is funny")
+    }
+}
+
+fun whenExpression(flag: Int) {
+    when (flag) {
+        1 -> println("x == 1")
+        2 -> println("x == 2")
+        else -> { // Note the block
+            println("flag is neither 1 nor 2")
+        }
+    }
+}
+
+fun whenExpression2(flag: Int) {
+    when (flag) {
+        0, 1 -> println("x == 0 or x == 1")
+        else -> println("otherwise")
+    }
+}
+
+fun whenExpression3(flag: Int) {
+    var s = "2"
+    when (flag) {
+        Integer.parseInt(s) -> println("s encodes flag")
+        else -> println("s does not encode flag")
+    }
+}
+
+fun whenExpression4(number: Int) {
+    var validNumbers = listOf(33, 55)
+    when (number) {
+        in 1..10 -> println("number is in the range")
+        in validNumbers -> println("number is valid")
+        !in 10..20 -> println("number is outside the range")
+        else -> println("none of the above")
+    }
+}
+
+fun hasPrefix(x: Any) = when(x) {
+    is String -> x.startsWith("prefix")
+    else -> false
+}
+
+class SuperMarket() {
+    fun isOdd(): Boolean {
+        var result = false
+        return result
+    }
+
+    fun isEven(): Boolean {
+        var result = false
+        return result
     }
 }
 --------------------------------------------------------	
@@ -127,12 +176,32 @@ fun main(args: Array<String>) {
     // 인덱스가있는 배열이나 목록을 반복 할 경우 다음과 같이 할 수 있습니다.
     forLoop3(fruits)
 
-    // Alternatively, you can use the withIndex library function
     // withIndex 라이브러리 함수를 이용할수도 있습니다.
     forLoop4(fruits)
+}
 
-    // While Loops
-    // while, do..while 루프는 기존의 방식과 동일합니다.
+fun forLoop(fruits: List<String>) {
+    for (item in fruits) print(item + " ")
+    println()
+}
+
+fun forLoop2(fruits: List<String>) {
+    for (item: String in fruits) {
+        print(item + " ")
+    }
+    println()
+}
+
+fun forLoop3(fruits: List<String>) {
+    for (i in fruits.indices) {
+        println(i.toString() + "번째 과일" + fruits[i])
+    }
+}
+
+fun forLoop4(fruits: List<String>) {
+    for ((index, value) in fruits.withIndex()) {
+        println("the element at $index is $value")
+    }
 }
 --------------------------------------------------------	
 감 수박 자두 
