--- a/_posts/2017-08-29-01.kotlin.md
+++ b/_posts/2017-08-29-01.kotlin.md
@@ -60,43 +60,19 @@ Choose b
 7
 ```
 
-### When Expression
+### When Expression 
+when은 C와 유사한 언어의 switch 연산자를 대체합니다.  
+when은 분기 조건이 충족 될 때까지 모든 분기에 대한 인수를 순차적으로 찾습니다.  
+when은 표현식이나 명령문으로 사용될 수 있습니다.  
+표현식으로 사용되면 만족 된 분기의 값이 전체 표현식의 값이됩니다.  
+명령문으로 사용되면 개별 분기의 값은 무시됩니다. (if와 마찬가지로 각 분기는 블록이 될 수 있고 마지막 표현식의 값이 리턴됩니다.)  
+분기 조건이 충족되지 않으면 else 블럭이 실행됩니다.  
+표현식으로 when이 사용될 경우 컴파일러가 모든 가능한 경우의 분기처리를 보장하지 못한다면 else 분기가 필수로 정의되어야 합니다.  
+
 ```
 fun main(args: Array<String>) {
-    // when 표현식은 C와 유사한 언어의 switch 연산자를 대체합니다.
-    // when은 분기 조건이 충족 될 때까지 모든 분기에 대한 인수를 순차적으로 찾습니다.
-    // when은 표현식이나 명령문으로 사용될 수 있습니다.
-    // 표현식으로 사용되면 만족 된 분기의 값이 전체 표현식의 값이됩니다.
-    // 명령문으로 사용되면 개별 분기의 값은 무시됩니다. (if와 마찬가지로 각 분기는 블록이 될 수 있고 마지막 표현식의 값이 리턴됩니다.)
-    // 분기 조건이 충족되지 않으면 else 블럭이 실행됩니    다.
-    // 표현식으로 when이 사용될 경우 컴파일러가 모든 가능한 경우의 분기처리를 보장하지 못한다면 else 분기가 필수로 정의되어야 합니다.
     whenExpression(1)
     whenExpression(3)
-
-    // 많은 경우가 동일한 방식으로 처리되어야 하는 경우 콤마를 이용하여 2개이상의 조건을 분기의 조건으로 사용할 수 있습니다.
-    whenExpression2(1)
-    whenExpression2(3)
-
-    // 분기 조건으로 임의의 표현식(상수뿐만 아니라)을 사용 할 수 있습니다.
-    whenExpression3(2)
-    whenExpression3(3)
-
-    // 분기 조건으로 범위 또는 컬렉션에있는 값을 사용 할 수 있습니다.
-    whenExpression4(3)
-    whenExpression4(33)
-
-    // 스마트 캐스트 (smart cast)를 이용하면 값이 특정 데이터 타입인지 확인하고, 추가 검사없이 메서드 및 속성에 액세스 할 수 있습니다.
-    println(hasPrefix(6000))
-    println(hasPrefix("prefix_test_book"))
-
-    // when 표현식은 if-else 제어문을 대체 할 수 있습니다.
-    // argument 값이 없는경우 분기조건에 boolean 표현식을 사용 할 수 있으며, 표현식의 결과가 true인 경우 분기문이 실행됩니다.
-    var SuperMarket = SuperMarket()
-    when {
-        SuperMarket.isOdd() -> println("x is odd")
-        SuperMarket.isEven() -> println("x is even")
-        else -> println("x is funny")
-    }
 }
 
 fun whenExpression(flag: Int) {
@@ -108,12 +84,34 @@ fun whenExpression(flag: Int) {
         }
     }
 }
+--------------------------------------------------------	
+x == 1
+flag is neither 1 nor 2
+```
+
+```
+fun main(args: Array<String>) {
+    // 많은 경우가 동일한 방식으로 처리되어야 하는 경우 콤마를 이용하여 2개이상의 조건을 분기의 조건으로 사용할 수 있습니다.
+    whenExpression2(1)
+    whenExpression2(3)
+}
 
 fun whenExpression2(flag: Int) {
     when (flag) {
         0, 1 -> println("x == 0 or x == 1")
         else -> println("otherwise")
     }
+}
+--------------------------------------------------------	
+x == 0 or x == 1
+otherwise
+```
+
+```
+fun main(args: Array<String>) {
+    // 분기 조건으로 임의의 표현식(상수뿐만 아니라)을 사용 할 수 있습니다.
+    whenExpression3(2)
+    whenExpression3(3)
 }
 
 fun whenExpression3(flag: Int) {
@@ -122,6 +120,17 @@ fun whenExpression3(flag: Int) {
         Integer.parseInt(s) -> println("s encodes flag")
         else -> println("s does not encode flag")
     }
+}
+--------------------------------------------------------	
+s encodes flag
+s does not encode flag
+```
+
+```
+fun main(args: Array<String>) {
+    // 분기 조건으로 범위 또는 컬렉션에있는 값을 사용 할 수 있습니다.
+    whenExpression4(3)
+    whenExpression4(33)
 }
 
 fun whenExpression4(number: Int) {
@@ -133,10 +142,37 @@ fun whenExpression4(number: Int) {
         else -> println("none of the above")
     }
 }
+--------------------------------------------------------	
+number is in the range
+number is valid
+```
+
+```
+fun main(args: Array<String>) {
+    // 스마트 캐스트 (smart cast)를 이용하면 값이 특정 데이터 타입인지 확인하고, 추가 검사없이 메서드 및 속성에 액세스 할 수 있습니다.
+    println(hasPrefix(6000))
+    println(hasPrefix("prefix_test_book"))
+}
 
 fun hasPrefix(x: Any) = when(x) {
     is String -> x.startsWith("prefix")
     else -> false
+}
+--------------------------------------------------------	
+false
+true
+```
+
+```
+fun main(args: Array<String>) {
+    // when 표현식은 if-else 제어문을 대체 할 수 있습니다.
+    // argument 값이 없는경우 분기조건에 boolean 표현식을 사용 할 수 있으며, 표현식의 결과가 true인 경우 분기문이 실행됩니다.
+    var SuperMarket = SuperMarket()
+    when {
+        SuperMarket.isOdd() -> println("x is odd")
+        SuperMarket.isEven() -> println("x is even")
+        else -> println("x is funny")
+    }
 }
 
 class SuperMarket() {
@@ -151,16 +187,6 @@ class SuperMarket() {
     }
 }
 --------------------------------------------------------	
-x == 1
-flag is neither 1 nor 2
-x == 0 or x == 1
-otherwise
-s encodes flag
-s does not encode flag
-number is in the range
-number is valid
-false
-true
 x is funny
 ```
 
