Added Kotlin posting about class

--- a/_posts/2017-08-29-02.kotlin.md
+++ b/_posts/2017-08-29-02.kotlin.md
@@ -18,6 +18,8 @@ Classes and Objects > Classes and Inheritance
 - [primary 생성자](#primary-생성자)
 - [secondary 생성자](#secondary-생성자)
 - [클래스의 인스턴스 만들기](#클래스의-인스턴스-만들기)
+- [상속](#상속)
+- [메소드 오버라이딩](#메소드-오버라이딩)
 
 <br />
 
@@ -122,5 +124,54 @@ val invoice = Invoice()
 val customer = Customer("Joe Smith")
 ```
 
+### 상속
+Kotlin의 모든 클래스는 슈퍼클래스인 Any를 소유합니다.  
+Any는 java.lang.Object가 아닙니다.
+특히 equals (), hashCode () 및 toString () 이외의 멤버가 없습니다.
+```
+class Example // 암묵적으로 Any를 상속
+```
 
+명시적으로 supertype을 선언하려면 클래스 헤더에 콜론과 함께 유형을 위치시킴니다.  
+클래스에 primary 생성자가 있으면 primary 생성자의 매개 변수를 사용하여 supertype을 바로 초기화 할 수 있습니다.
+open annotation은 Java의 final과 반대입니다.  
+Kotlin의 모든 클래스는 final이므로 open annotation이 선언되어야 다른 클래스에서 이 클래스를 상속받을 수 있습니다.  
+```
+open class Base(p: Int)
+
+class Derived(p: Int) : Base(p)
+```
+
+클래스에 기본 생성자가 없으면 각 secondary 생성자는 super 키워드를 사용하여 supertype을 초기화하거나 이를 수행하는 다른 생성자에 위임해야합니다.  
+이 경우, primary 생성자는 supertype의 다른 생성자를 호출 할 수 있습니다.  
+```
+class MyView : View {
+    constructor(ctx: Context) : super(ctx)
+
+    constructor(ctx: Context, attrs: AttributeSet) : super(ctx, attrs)
+}
+```
+
+### 메소드 오버라이딩
+그리고 Java와는 달리 Kotlin은 오버라이딩 할 수 있는 멤버에 대한 명시적인 annotation(코틀린에서는 이것이 open이라는 키워드로 불림)을 요구합니다.  
+오버라이딩 구현시 override annotation을 사용해야 하며 그렇지 않으면 컴파일을 할 수 없습니다.  
+Base.nv ()와 같은 함수에 open annotation이 없으면 서브 클래스에서 동일한 signature를 가진 메소드에 대한 선언이 금지됩니다.
+```
+open class Base {
+    open fun v() {}
+    fun nv() {}
+}
+class Derived() : Base() {
+    override fun v() {}
+}
+```
+
+override가 선언된 멤버는 자체적으로 열려 있습니다.  
+즉, 하위 클래스에서 재정의 될 수 있습니다.  
+하위클래스에서의 오버라이딩을 금지하려면 final을 사용하면 됩니다.
+```
+open class AnotherDerived() : Base() {
+    final override fun v() {}
+}
+```
 
