Added Kotlin posting about class

--- a/_posts/2017-08-29-02.kotlin.md
+++ b/_posts/2017-08-29-02.kotlin.md
@@ -20,6 +20,11 @@ Classes and Objects > Classes and Inheritance
 - [클래스의 인스턴스 만들기](#클래스의-인스턴스-만들기)
 - [상속](#상속)
 - [메소드 오버라이딩](#메소드-오버라이딩)
+- [프로퍼티 오버라이딩](#프로퍼티-오버라이딩)
+- [superclass 구현 후 호출하기](#superclass-구현-후-호출하기)
+- [오버라이딩 규칙](#오버라이딩-규칙)
+- [추상클래스](#추상클래스)
+- [Companion Objects](#companion-objects)
 
 <br />
 
@@ -175,3 +180,126 @@ open class AnotherDerived() : Base() {
 }
 ```
 
+### 프로퍼티 오버라이딩
+프로퍼티 오버라이딩은 메서드 오버라이딩과 비슷한 방식으로 작동합니다.  
+파생클래스에서 선언되는 프로퍼티는 override로 시작되어야 하며, 호환가능한 타입이어야 합니다.  
+선언된 각 프로퍼티는 initializer 또는  getter method와 함께 재정의 될 수 있습니다.
+```
+open class Foo {
+    open val x: Int get() { ... }
+}
+
+class Bar1 : Foo() {
+    override val x: Int = ...
+}
+```
+
+var프로퍼티는 val프로퍼티로 재정의 할 수도 있지만 그 반대는 불가합니다.  
+이는 val프로퍼티가 기본적으로 getter method를 선언하고 var로 재정의되면 파생클래스에서 setter method를 추가로 선언하기 때문에 허용됩니다.
+```
+// 기본 생성자에서 속성 선언의 일부로 override 키워드를 사용할 수 있습니다.
+interface Foo {
+    val count: Int
+}
+
+class Bar1(override val count: Int) : Foo
+
+class Bar2 : Foo {
+    override var count: Int = 0
+}
+```
+
+### superclass 구현 후 호출하기
+파생 클래스에서는 super 키워드를 사용하여 superclass 함수 및 속성을 호출 할 수 있습니다.  
+```
+open class Foo {
+    open fun f() { println("Foo.f()") }
+    open val x: Int get() = 1
+}
+
+class Bar : Foo() {
+    override fun f() { 
+        super.f()
+        println("Bar.f()") 
+    }
+    
+    override val x: Int get() = super.x + 1
+}
+```
+
+innerclass 내부에서 외부 클래스의 superclass 액세스하는 것은 외부 클래스 이름으로 수식 된 super 키워드(super@Outer)를 이용하면 됩니다.  
+```
+class Bar : Foo() {
+    override fun f() { /* ... */ }
+    override val x: Int get() = 0
+    
+    inner class Baz {
+        fun g() {
+            super@Bar.f() // Calls Foo's implementation of f()
+            println(super@Bar.x) // Uses Foo's implementation of x's getter
+        }
+    }
+}
+```
+
+### 오버라이딩 규칙
+Kotlin에서 상속은 다음 규칙에 의해 규제됩니다.  
+클래스가 직접 superclass에서 동일한 멤버의 많은 구현을 상속하는 경우 해당 멤버를 재정의하고 자체 구현을 제공해야합니다(상속 된 클래스 중 하나를 사용하는 경우).  
+supertype을 나타내기 위해서는 꺽쇠괄호(super<Base>) 안에 supertype을 선언하면됩니다.  
+```
+// A와 B 모두에서 상속하는 것이 좋습니다.  
+// a(), b()의 경우 상속받은 클래스 안에 하나의 함수만 존재하므로 문제가 되지 않습니다.
+// 그러나 f ()의 경우 C에 의해 상속 된 동일한 이름의 함수가 존재하므로 C에서 f()를 재정의하고 모호성을 제거해야 합니다.
+open class A {
+    open fun f() { print("A") }
+    fun a() { print("a") }
+}
+
+interface B {
+    fun f() { print("B") } // interface members are 'open' by default
+    fun b() { print("b") }
+}
+
+class C() : A(), B {
+    // The compiler requires f() to be overridden:
+    override fun f() {
+        super<A>.f() // call to A.f()
+        super<B>.f() // call to B.f()
+    }
+}
+```
+
+### 추상클래스
+클래스와 멤버 중 일부는 abstract로 선언 될 수 있습니다.  
+abstract 멤버는 클래스 내에 구현되지 않습니다.  
+abstract가 아닌 멤버를 abstract 멤버로 재정의 할수도 있습니다.  
+```
+open class Base {
+    open fun f() {}
+}
+
+abstract class Derived : Base() {
+    override abstract fun f()
+}
+```
+
+### Companion Objects
+Kotlin에서는 Java 또는 C#과 달리 클래스에 정적 메소드가 없습니다.  
+대부분의 경우 단순히 패키지수준의 함수를 사용하는것이 좋습니다.  
+클래스 인스턴스가 없어도 호출 할 수 있지만 클래스의 내부(예: 팩토리 메소드)에 액세스해야하는 함수를 작성해야하는 경우 해당 클래스 내에 오브젝트 선언의 멤버로 작성할 수 있습니다.  
+보다 구체적으로, 클래스 내에 Companion Object를 선언하면 클래스 이름만 한정자로 사용하여 Java/C#에서 정적 메소드를 호출하는 것과 동일한 구문으로 멤버를 호출 할 수 있습니다.  
+```
+fun main(args: Array<String>) {
+    println(Commons.callCompanion())
+}
+
+class Commons() {
+    companion object {
+        fun callCompanion(): String {
+            return "Hello Companion Object"
+        }
+    }
+}
+--------------------------------------------------------	
+Hello Companion Object
+```
