--- a/_posts/2017-10-24-01.kotlin.md
+++ b/_posts/2017-10-24-01.kotlin.md
@@ -6,11 +6,14 @@ lastmod: 2017-10-26T01:10
 category: post
 ---
 
+<img class="fit image" src="/images/post/kotlin_250x250.png">
+이미지 출처: https://kotlinlang.org/assets/images/open-graph/kotlin_250x250.png
+<br />
+
 ## 테스트케이스로 코틀린 문법익히기   
 ### Chapter1 - 주요기능 소개   
 Kotlin Github repository의 kotlin-koans 프로젝트를 기반으로 포스팅 되었음을 밝힘니다.  
 출처: [https://github.com/Kotlin/kotlin-koans](https://github.com/Kotlin/kotlin-koans)  
-
 <br />
 
 ## 목차
@@ -167,7 +170,7 @@ public String foo(String name) {
 }
 ```
 ### <a name="lambda"><a/>람다식 이용하기 <sup>[목차 ⇈](#목차)</sup> 
-<span style="color:blue;">test package(Java)</span>   
+<span style="color:blue;">test package</span>   
 ```
 @Test fun contains() {
     assertTrue(task4(listOf(1, 2, 3)))
@@ -178,7 +181,7 @@ public String foo(String name) {
 }
 ```
 
-src package
+<span style="color:blue;">src package</span>   
 람다식을 이용하여 loop문을 직접적으로 사용하지 않고 배열을 순회할 수 있습니다.   
 아래 function에 사용되는 any함수의 경우 람다식 안의 결과가 1건이라도 true이면 true를 리턴합니다.   
 ```
@@ -186,7 +189,7 @@ fun task4(collection: Collection<Int>) = collection.any { element -> element % 2
 ```
 
 ### <a name="string-template"><a/>String 템플릿 사용하기 <sup>[목차 ⇈](#목차)</sup> 
-<span style="color:blue;">test package(Java)</span>   
+<span style="color:blue;">test package</span>   
 ```
 @Test fun match() {
     assertTrue("11 MAR 1952".matches(task5().toRegex()))
@@ -201,7 +204,7 @@ fun task4(collection: Collection<Int>) = collection.any { element -> element % 2
 }
 ```
 
-<span style="color:blue;">src package(Java)</span>   
+<span style="color:blue;">src package</span>   
 Kotlin에서는 dollar sign($)을 이용하여 문자열선언과 함게 변수를 정의할 수 있습니다.   
 아래처럼 task5 function을 정의하면 호출시 """\d{2} (JAN|FEB|MAR|APR|MAY|JUN|JUL|AUG|SEP|OCT|NOV|DEC) \d{4}""" 문자열이 리턴됩니다.
 ```
@@ -210,19 +213,25 @@ fun task5(): String = """\d{2} $month \d{4}"""
 ```
 
 ### <a name="data-class"><a/>data class 사용하기 <sup>[목차 ⇈](#목차)</sup> 
-<span style="color:blue;">test package(Java)</span>   
+<span style="color:blue;">test package</span>   
 ```
 @Test fun testListOfPeople() {
     assertEquals("[Person(name=Alice, age=29), Person(name=Bob, age=31)]", task6().toString())
 }
 ```
 
-<span style="color:blue;">src package(Java)</span>   
+<span style="color:blue;">src package</span>   
+class 선언시에 'data' modifier를 추가하면 toString() function을 이용하여 객체의 내용을 출력할 수 있습니다.
 ```
+data class Person(val name: String, val age: Int)
+
+fun task6(): List<Person> {
+    return listOf(Person("Alice", 29), Person("Bob", 31))
+}
 ```
 
 ### <a name="nullable"><a/>nullable type 이용하기 <sup>[목차 ⇈](#목차)</sup> 
-<span style="color:blue;">test package(Java)</span>   
+<span style="color:blue;">test package</span>   
 ```
 fun testSendMessageToClient(
         client: Client?,
@@ -268,12 +277,31 @@ fun testSendMessageToClient(
 }
 ```
 
-<span style="color:blue;">src package(Java)</span>   
+<span style="color:blue;">src package</span>   
 ```
+fun sendMessageToClient(
+        client: Client?, message: String?, mailer: Mailer
+) {
+    // 자료형 뒤에 safe call operator(?)를 붙이면 null값을 할당할 수 있고 safe call을 이용하여 NPE을 방지할 수 있습니다. 
+    // email 상수에 값을 할당할때 safe call을 이용하면 다음과 같이 동작합니다.
+    // client가 null이 아니면 personalInfo속성에 접근 
+    // personalInfo가 null이 아니면 email값을 할당
+    val email: String? = client?.personalInfo?.email
+    if (email != null && message != null) {
+        mailer.sendMessage(email, message)
+    }
+}
+
+class Client (val personalInfo: PersonalInfo?)
+class PersonalInfo (val email: String?)
+
+interface Mailer {
+    fun sendMessage(email: String, message: String)
+}
 ```
 
 ### <a name="smart-cast"><a/>smart cast 이용하기 <sup>[목차 ⇈](#목차)</sup> 
-<span style="color:blue;">test package(Java)</span>   
+<span style="color:blue;">test package</span>   
 ```
 @Test fun testNum() {
     assertEquals("'eval' on Num should work:", 2, eval(Num(2)))
@@ -288,12 +316,12 @@ fun testSendMessageToClient(
 }
 ```
 
-<span style="color:blue;">src package(Java)</span>   
+<span style="color:blue;">src package</span>   
 ```
 ```
 
 ### <a name="extension"><a/>함수 확장하기 <sup>[목차 ⇈](#목차)</sup> 
-<span style="color:blue;">test package(Java)</span>   
+<span style="color:blue;">test package</span>   
 ```
 @Test fun testIntExtension() {
     assertEquals("Rational number creation error: ", RationalNumber(4, 1), 4.r())
@@ -304,24 +332,24 @@ fun testSendMessageToClient(
 }
 ```
 
-<span style="color:blue;">src package(Java)</span>   
+<span style="color:blue;">src package</span>   
 ```
 ```
 
 ### <a name="object-expression"><a/>객체 표현식 이용하기 <sup>[목차 ⇈](#목차)</sup> 
-<span style="color:blue;">test package(Java)</span>   
+<span style="color:blue;">test package</span>   
 ```
 @Test fun testSort() {
     assertEquals(listOf(5, 2, 1), task10())
 }
 ```
 
-<span style="color:blue;">src package(Java)</span>   
+<span style="color:blue;">src package</span>   
 ```
 ```
 
 ### <a name="sam"><a/>SAM(Single Abstract Method) 구현하기 <sup>[목차 ⇈](#목차)</sup> 
-<span style="color:blue;">test package(Java)</span>   
+<span style="color:blue;">test package</span>   
 ```
 @Test fun testSort() {
     assertEquals(listOf(5, 2, 1), task11())
@@ -333,14 +361,14 @@ src package
 ```
 
 ### <a name="collection"><a/>콜렉션 확장기능 이용하기 <sup>[목차 ⇈](#목차)</sup> 
-<span style="color:blue;">test package(Java)</span>   
+<span style="color:blue;">test package</span>   
 ```
 @Test fun testSort() {
     assertEquals(listOf(5, 2, 1), task12())
 }
 ```
 
-<span style="color:blue;">src package(Java)</span>   
+<span style="color:blue;">src package</span>   
 ```
 ```
 
