--- a/_posts/2017-08-29-01.kotlin.md
+++ b/_posts/2017-08-29-01.kotlin.md
@@ -5,6 +5,10 @@ date: 2017-08-29T01:00
 category: post
 ---
 
+<img class="fit image" src="/images/post/kotlin_250x250.png">
+이미지 출처: https://kotlinlang.org/assets/images/open-graph/kotlin_250x250.png
+<br />
+
 ## if, when, for, while 제어문
 kotlinlang 사이트의 가이드문서를 기반으로 포스팅 되었음을 밝힘니다.  
 Basics > Control Flow  
