--- a/_posts/2017-08-29-02.kotlin.md
+++ b/_posts/2017-08-29-02.kotlin.md
@@ -6,6 +6,10 @@ lastmod: 2017-10-21T01:10
 category: post
 ---
 
+<img class="fit image" src="/images/post/kotlin_250x250.png">
+이미지 출처: https://kotlinlang.org/assets/images/open-graph/kotlin_250x250.png
+<br />
+
 ## Kotlin 클래스와 상속
 kotlinlang 사이트의 가이드문서를 기반으로 포스팅 되었음을 밝힘니다.  
 Classes and Objects > Classes and Inheritance    
