Added post about Kotlin Syntax.

--- a/_posts/2017-10-24-01.kotlin.md
+++ b/_posts/2017-10-24-01.kotlin.md
@@ -8,6 +8,7 @@ category: post
 
 <img class="fit image" src="/images/post/kotlin_250x250.png">
 이미지 출처: https://kotlinlang.org/assets/images/open-graph/kotlin_250x250.png
+
 <br />
 
 ## 테스트케이스로 코틀린 문법익히기   
@@ -317,7 +318,18 @@ interface Mailer {
 ```
 
 <span style="color:blue;">src package</span>   
+조상클래스가 동일한경우 type을 조건으로 when표현식을 사용할 수 있습니다.   
+조건에 따라 분기된 람다식에서 추가적인 캐스팅절차없이 원래의 자료형을 곧바로 사용할 수 있습니다.   
 ```
+sealed class Expr
+class Num(val value: Int) : Expr()
+class Sum(val left: Expr, val right: Expr) : Expr()
+
+fun eval(e: Expr): Int =
+        when (e) {
+            is Num -> e.value
+            is Sum -> eval(e.left) + eval(e.right)
+        }
 ```
 
 ### <a name="extension"><a/>함수 확장하기 <sup>[목차 ⇈](#목차)</sup> 
@@ -333,7 +345,12 @@ interface Mailer {
 ```
 
 <span style="color:blue;">src package</span>   
+Kotlin에서는 기존 클래스의 function을 확작하여 사용할 수 있습니다.
 ```
+data class RationalNumber(val numerator: Int, val denominator: Int)
+
+fun Int.r(): RationalNumber = RationalNumber(this, 1)
+fun Pair<Int, Int>.r(): RationalNumber = RationalNumber(this.first, this.second)
 ```
 
 ### <a name="object-expression"><a/>객체 표현식 이용하기 <sup>[목차 ⇈](#목차)</sup> 
@@ -344,8 +361,17 @@ interface Mailer {
 }
 ```
 
-<span style="color:blue;">src package</span>   
+<span style="color:blue;">src package</span> 
+객체 표현식을 이용하여 객체를 생성 할 수 있습니다.   
+아래와 같이 객체 표현식을 이용하여 abstract메서드를 구현하면서 객체를 생성 할 수 있습니다.
 ```
+fun task10(): List<Int> {
+    val arrayList = arrayListOf(1, 5, 2)
+    Collections.sort(arrayList, object : Comparator<Int> {
+        override fun compare(x: Int, y: Int) = y - x
+    })
+    return arrayList
+}
 ```
 
 ### <a name="sam"><a/>SAM(Single Abstract Method) 구현하기 <sup>[목차 ⇈](#목차)</sup> 
@@ -357,7 +383,13 @@ interface Mailer {
 ```
 
 src package
+하나의 abstract method를 가지고 있는 클래스를 구현해야 하는 경웅 람다식을 이용하여 간단하게 정의 할 수도 있습니다.
 ```
+fun task11(): List<Int> {
+    val arrayList = arrayListOf(1, 5, 2)
+    Collections.sort(arrayList, { x, y -> y - x })
+    return arrayList
+}
 ```
 
 ### <a name="collection"><a/>콜렉션 확장기능 이용하기 <sup>[목차 ⇈](#목차)</sup> 
@@ -369,6 +401,11 @@ src package
 ```
 
 <span style="color:blue;">src package</span>   
+Kotlin 표준 라이브러리에는 컬렉션 작업을 보다 편리하게 해주는 많은 확장 기능이 포함되어 있습니다.   
+'sortedDescending'을 아래와 같이 사용할 경우 별도로 Comparator를 구현하지 않아도 됩니다.   
 ```
+fun task12(): List<Int> {
+    return arrayListOf(1, 5, 2).sortedDescending()
+}
 ```
 
