--- a/_posts/2017-10-30-01.kotlin.md
+++ b/_posts/2017-10-30-01.kotlin.md
@@ -26,6 +26,7 @@ Kotlin Github repository의 kotlin-koans 프로젝트를 기반으로 포스팅 
 - [코틀린 컬렉션 partition](#partition)
 - [코틀린 컬렉션 fold](#fold)
 - [코틀린 컬렉션 2개이상의 함수를 연속으로 호출하기](compound)
+- [코틀린 표준라이브러리를 이용하여 Java코드를 Kotlin코드로 변경하기](conversion)
 
 ### <a name=""><a/>예제용 Shop클래스 <sup>[목차 ⇈](#목차)</sup> 
 {% highlight java linenos %}
@@ -162,55 +163,178 @@ fun Shop.getSetOfCustomers(): Set<Customer> {
 ### <a name="mapfilter"><a/>코틀린 컬렉션 map, filter <sup>[목차 ⇈](#목차)</sup> 
 <span style="color:blue;">src package</span>   
 {% highlight java linenos %}
+fun Shop.getCitiesCustomersAreFrom(): Set<City> {
+    // Return the set of cities the customers are from
+    // map 함수는 지정된 변환 함수를 원본 컬렉션의 각 요소에 적용하고 결과값을 반환합니다.
+    // customers.map { element -> element.city }
+    // element 네임을 지정하지 않아도 it 키워드로 element에 접근이 가능합니다.
+    return customers.map { it.city }.toSet()
+}
+
+fun Shop.getCustomersFrom(city: City): List<Customer> {
+    // Return a list of the customers who live in the given city
+    // filter 함수는 지정된 조건과 일치하는 요소의 리스트를 반환합니다.
+    return customers.filter { it.city == city }
+}
 {% endhighlight %}
 
 <span style="color:blue;">test package</span>   
 {% highlight java linenos %}
+@Test fun testCustomersFromCity() {
+    assertEquals(listOf(customers[lucas], customers[cooper]), shop.getCustomersFrom(Canberra))
+}
 {% endhighlight %}
 
 ### <a name="firstornull"><a/>코틀린 컬렉션 any, all, count, firstOrNull <sup>[목차 ⇈](#목차)</sup> 
 <span style="color:blue;">src package</span>   
 {% highlight java linenos %}
+fun Customer.isFrom(city: City): Boolean {
+    // Return true if the customer is from the given city
+    return this.city == city
+}
+
+fun Shop.checkAllCustomersAreFrom(city: City): Boolean {
+    // Return true if all customers are from the given city
+    // 컬렉션의 모든 element가 주어진 조건과 일치하면 true를 반환하고 그렇지 않으면 false를 반환합니다.
+    return customers.all { it.isFrom(city)}
+}
+
+fun Shop.hasCustomerFrom(city: City): Boolean {
+    // Return true if there is at least one customer from the given city
+    // 컬렉션의 element중 주어진 조건과 일치하는 element가 1개 이상이면 true를 반환하고 그렇지 않으면 false를 반환합니다.
+    return customers.any { it.isFrom(city) }
+}
+
+fun Shop.countCustomersFrom(city: City): Int {
+    // Return the number of customers from the given city
+    // 컬렉션의 element중 주어진 조건과 일치하는 element의 수를 반환합니다.
+    return customers.count { it.isFrom(city) }
+}
+
+fun Shop.findFirstCustomerFrom(city: City): Customer? {
+    // Return the first customer who lives in the given city, or null if there is none
+    // 컬렉션의 element중 주어진 조건과 일치하는 첫번째 element를 반환합니다.
+    // 일치하는 element가 없으면 null를 반환합니다.
+    return customers.firstOrNull { it.isFrom(city) }
+}
 {% endhighlight %}
 
 <span style="color:blue;">test package</span>   
 {% highlight java linenos %}
+@Test fun testCustomerIsFromCity() {
+    assertTrue(customers[lucas]!!.isFrom(Canberra))
+    assertFalse(customers[lucas]!!.isFrom(Budapest))
+}
+
+@Test fun testAllCustomersAreFromCity() {
+    assertFalse(shop.checkAllCustomersAreFrom(Canberra))
+}
+
+@Test fun testAnyCustomerIsFromCity() {
+    assertTrue(shop.hasCustomerFrom(Canberra))
+}
+
+@Test fun testCountCustomersFromCity() {
+    assertEquals(2, shop.countCustomersFrom(Canberra))
+}
+
+@Test fun testFirstCustomerFromCity() {
+    assertEquals(customers[lucas], shop.findFirstCustomerFrom(Canberra))
+    assertEquals(null, shop.findFirstCustomerFrom(City("Chicago")))
+}
 {% endhighlight %}
 
 ### <a name="flatmap"><a/>코틀린 컬렉션 flatMap <sup>[목차 ⇈](#목차)</sup> 
 <span style="color:blue;">src package</span>   
 {% highlight java linenos %}
+// flatMap 함수는 원본 콜렉션의 각 요소에서 transform function이 실행된 결과로 얻은 모든 요소의 단일 목록을 리턴합니다.
+val Customer.orderedProducts: Set<Product> get() {
+    // Return all products this customer has ordered
+    // 아래와 같이 flatMap을 이용하면 List<Order> 객체를 순회하며 Order.products를 모두 포함한 단일컬렉션을 반환할 수 있습니다.
+    return this.orders.flatMap { it.products }.toSet()
+}
+
+val Shop.allOrderedProducts: Set<Product> get() {
+    // Return all products that were ordered by at least one customer
+    return customers.flatMap { it.orderedProducts }.toSet()
+}
 {% endhighlight %}
 
 <span style="color:blue;">test package</span>   
 {% highlight java linenos %}
+@Test fun testGetOrderedProductsSet() {
+    assertEquals(setOf(idea), customers[reka]!!.orderedProducts)
+}
+
+@Test fun testGetAllOrderedProducts() {
+    assertEquals(orderedProducts, shop.allOrderedProducts)
+}
 {% endhighlight %}
 
 ### <a name="maxby"><a/>코틀린 컬렉션 maxBy <sup>[목차 ⇈](#목차)</sup> 
 <span style="color:blue;">src package</span>   
 {% highlight java linenos %}
+fun Shop.getCustomerWithMaximumNumberOfOrders(): Customer? {
+    // Return a customer whose order count is the highest among all customers
+    // maxBy 함수는 주어진 조건의 값중 가장 큰값을 가지고 있는 element를 반환합니다.
+    // 만약 일치하는 값이 없으면 null값을 반환합니다.
+    return customers.maxBy { it.orders.size }
+}
+
+fun Customer.getMostExpensiveOrderedProduct(): Product? {
+    // Return the most expensive product which has been ordered
+    return orderedProducts.maxBy { it.price }
+}
 {% endhighlight %}
 
 <span style="color:blue;">test package</span>   
 {% highlight java linenos %}
+@Test fun testCustomerWithMaximumNumberOfOrders() {
+    assertEquals(customers[reka], shop.getCustomerWithMaximumNumberOfOrders())
+}
+
+@Test fun testTheMostExpensiveOrderedProduct() {
+    assertEquals(rubyMine, customers[nathan]!!.getMostExpensiveOrderedProduct())
+}
 {% endhighlight %}
 
 ### <a name="sortby"><a/>코틀린 컬렉션 sortBy <sup>[목차 ⇈](#목차)</sup> 
 <span style="color:blue;">src package</span>   
 {% highlight java linenos %}
+fun Shop.getCustomersSortedByNumberOfOrders(): List<Customer> {
+    // Return a list of customers, sorted by the ascending number of orders they made
+    // sortedBy 함수는 주어진 조건을 기준으로 element를 정렬한 결과값을 반환합니다.
+    return customers.sortedBy { it.orders.size }
+}
 {% endhighlight %}
 
 <span style="color:blue;">test package</span>   
 {% highlight java linenos %}
+@Test fun testGetCustomersSortedByNumberOfOrders() {
+    assertEquals(sortedCustomers, shop.getCustomersSortedByNumberOfOrders())
+}
 {% endhighlight %}
 
 ### <a name="sumbydouble"><a/>코틀린 컬렉션 sumByDouble <sup>[목차 ⇈](#목차)</sup> 
 <span style="color:blue;">src package</span>   
 {% highlight java linenos %}
+fun Customer.getTotalOrderPrice(): Double {
+    // Return the sum of prices of all products that a customer has ordered.
+    // Note: a customer may order the same product for several times.
+    // sumByDouble는 배열을 순회하며 선언된 속성값을 모두 합산하고 그 결과값을 반환합니다. 
+    return orders.flatMap { it.products }.sumByDouble { it.price }
+}
 {% endhighlight %}
 
 <span style="color:blue;">test package</span>   
 {% highlight java linenos %}
+@Test fun testGetTotalOrderPrice() {
+    assertEquals(148.0, customers[nathan]!!.getTotalOrderPrice(), 0.001)
+}
+
+@Test fun testTotalPriceForRepeatedProducts() {
+    assertEquals(586.0, customers[lucas]!!.getTotalOrderPrice(), 0.001)
+}
 {% endhighlight %}
 
 ### <a name="groupby"><a/>코틀린 컬렉션 groupBy <sup>[목차 ⇈](#목차)</sup> 
@@ -248,3 +372,15 @@ fun Shop.getSetOfCustomers(): Set<Customer> {
 <span style="color:blue;">test package</span>   
 {% highlight java linenos %}
 {% endhighlight %}
+
+### <a name="conversion"><a/>코틀린 표준라이브러리를 이용하여 Java코드를 Kotlin코드로 변경하기 <sup>[목차 ⇈](#목차)</sup> 
+<span style="color:blue;">src package</span>   
+{% highlight java linenos %}
+{% endhighlight %}
+
+<span style="color:blue;">test package</span>   
+{% highlight java linenos %}
+{% endhighlight %}
+
+
+
